--- a/oshop/client/package.json
+++ b/oshop/client/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.1",
+    "@angular/animations": "^12.1.4",
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
@@ -21,6 +21,7 @@
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.0.0",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
