add Basket feature in API using redis

--- a/oshop/API/appsettings.Development.json
+++ b/oshop/API/appsettings.Development.json
@@ -8,7 +8,8 @@
   },
 
   "ConnectionStrings": {
-    "DefaltConnection" : "Data source=oshop.db"
+    "DefaltConnection" : "Data source=oshop.db",
+    "Redis":"localhost"
   },
 
   "ApiUrl" : "https://localhost:5001/"
