--- a/oshop/Infrastructure/Infrastructure.csproj
+++ b/oshop/Infrastructure/Infrastructure.csproj
@@ -1,17 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
-   
+    <ProjectReference Include="..\Core\Core.csproj"/>
   </ItemGroup>
-
-  <ItemGroup> 
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" /> 
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.3" />
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.3"/>
+    <PackageReference Include="StackExchange.Redis" Version="2.2.62"/>
   </ItemGroup>
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
 </Project>
