--- a/oshop/API/appsettings.Development.json
+++ b/oshop/API/appsettings.Development.json
@@ -2,14 +2,20 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
 
   "ConnectionStrings": {
     "DefaltConnection" : "Data source=oshop.db",
+    "IdentityConnection": "Data source=identity.db",
     "Redis":"localhost"
+  },
+
+  "Token" : {
+    "Key": "super secret key",
+    "Issuer" : "https://localhost:5001"
   },
 
   "ApiUrl" : "https://localhost:5001/"
